corrected shade plugin to generate manifest

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,9 @@ akka.tracing {
   port = 9410 # default
   sample-rate = 1
   
+  enabled = true
+  max-spans-per-second = 100
+  
 #logging
   loglevel="INFO"  
 }
