--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 		      </transformer>
 		      <transformer
 		       implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-		       
+		       <mainClass>io.tuhin.java.tracing.Main</mainClass>
 		      </transformer>
 		    </transformers>
 		   </configuration>
